fix navbar hamburger menu not showing

--- a/public/css/_features.scss
+++ b/public/css/_features.scss
@@ -69,7 +69,7 @@
 
 .features.features-install {
   @extend .container;
-  width: 480px;
+  max-width: 480px;
 
   h1 {
     text-align: center;
