--- a/public/css/_nav.scss
+++ b/public/css/_nav.scss
@@ -8,4 +8,9 @@
     height: 36px;
     margin-top: -8px;
   }
+
+  .fa.fa-bars {
+    font-size: 120%;
+    color: $gray-dark;
+  }
 }
